fixed scrollbar blocking website

--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,18 @@
- body{font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;overflow-x:hidden}
  html,body
 {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+
 }
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+
+ body{font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;overflow-x:hidden}
  p{font-size:20px}
  p.small{font-size:16px}
  a,a.active,a:active,a:focus,a:hover{color:#18BC9C;outline:0}
@@ -123,6 +129,11 @@ section{padding:100px 0}
 .about p{
   margin-top: 5px;
   text-align: justify;
+}
+
+.about .row{
+    margin-right: -15px
+    margin-left: -15px;
 }
 
 /* FIN AJUSTEMENT A PROPOS */
